added helper functions

--- a/package.json
+++ b/package.json
@@ -48,14 +48,6 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ishanarora143/air_monitoring.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ishanarora143/air_monitoring/issues"
-  },
-  "homepage": "https://github.com/ishanarora143/air_monitoring#readme"
+  "license": "ISC"
 }
